--- a/trm_umls/requirements.txt
+++ b/trm_umls/requirements.txt
@@ -13,3 +13,10 @@ jinja2>=3.1.0
 
 faiss-cpu>=1.7.4
 # faiss-gpu  # optional, if you have a compatible CUDA build
+
+# UI / local API
+fastapi>=0.110.0
+uvicorn[standard]>=0.27.0
+
+# Review export
+xlsxwriter>=3.2.0
