--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
     "katex": "^0.16.22",
+    "marked": "^16.4.2",
+    "marked-katex-extension": "^4.0.1",
+    "mermaid": "^11.4.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "xlsx": "^0.18.5"
